# chad

./: .envrc.example  .gitignore  README.md
chad/: README.md  pyproject.toml
chad/accounts/: admin.py  forms.py  managers.py  middleware copy.py  middleware.py  models.py  relay.py  schema.py  types.py
chad/accounts/migrations/: 0001_initial.py
chad/accounts/resolvers/: mutation.py  query.py
chad/accounts/schema/: user.graphql
chad/agent/: admin.py  apps.py  forms.py  models.py  schema.py  schemata.py  signals.py  types.py
chad/agent/migrations/: 0001_initial.py
chad/agent/resolvers/: __init__.py  mutation.py  query.py
chad/agent/schema/: agent.graphql  bot.graphql
chad/chad/: asgi.py  consumers.py  message.py  routing.py  settings.py  subscription.py  urls.py  wsgi.py
chad/chad/iam/: middleware.py
chad/chad/schema/: __init__.py  hub.py  resolvers.py  schema.graphql
chad/chad/schema/schemas/: agent.graphql  chat.graphql  message.graphql  mutation.graphql  query.graphql  user.graphql
chad/chad/schema/types/: __init__.py  agent.py  base.py  chat.py  datetime.py
chad/chat/: events.py  hub.py  models.py  schema.py  schemata.py  types.py
chad/chat/migrations/: 0001_initial.py  0002_remove_message_updated_date_chat_created_date_and_more.py
chad/chat/resolvers/: __init__.py  mutation.py  query.py  subscription copy.py  subscription.py
chad/chat/schema/: chat.graphql  message.graphql
client/: .env.example  README.md  codegen.ts  package.json  quasar.config.js  tsconfig.json
client/src/: App.vue  App2.vue
client/src/components/: NavDrawer.vue
client/src/components/agent/: AgentItem.vue
client/src/components/chat/: ChatCard.vue  ChatIndexView.vue  ChatMessages.vue
client/src/gql/: gql.ts  graphql.ts
client/src/layouts/: MainLayout.vue
client/src/pages/: IndexPage.vue
client/src/pages/chat/: ChatPage.vue  (+2 more)
client/src/router/: routes.ts
client/src/stores/: user.ts
(+4 files in other folders)
